# reference-engine

./: README.md  pyproject.toml
examples/: 01_free_fall.py  02_geometry_test.py  03_pendulum.py
src/reference_engine/: __init__.py  body.py  constraints.py  force.py  frame.py  geometry.py  integrator.py  world.py
